--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.10.0",
     "react-share": "^5.1.2",
     "recharts": "^2.15.0",
     "sweetalert": "^2.1.2",
